# seqera-kit

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  build_tower_e2e.py  environment.yaml  environment.yml  example_showcase_e2e.yaml  pyproject.toml  run_benchmarks.py  setup.py  tower_e2e_helper.py  tw_cli_e2e.yaml
.github/: CONTRIBUTING.md  cleanup.yml
.github/workflows/: build_e2e_showcase.yml  cleanup.yml  docker-image.yml  e2e-testing.yml  overwrite-testing.yml  python-linting.yml  python-publish.yml  python-testing.yml  teardown.yml
examples/python/: cleanup_e2e.py  launch_hello_world.py
examples/yaml/: aws-e2e.yml  azure-e2e.yaml  gcp-e2e.yaml  seqerakit-e2e.yml  (+2 more)
scripts/: benchmark_tests.yaml  benchmarks.config
seqerakit/: cli.py  computeenvs.py  dump.py  helper.py  on_exists.py  overwrite.py  pipelines.py  seqeraplatform.py  utils.py
templates/: actions.yml  compute-envs.yml  credentials.yml  data-links.yml  datasets.yml  labels.yml  launch.yml  members.yml  organizations.yml  participants.yml  pipelines.yml  secrets.yml  studios.yml  teams.yml  workspaces.yml
tw_py/: __init__.py  base.py  cli.py  computeenvs.py  datasets.py  helper.py  organizations.py  pipelines.py  setup.py  tower.py  utils.py  workspace.py
tw_pywrap/: __init__.py  cli.py  helper.py  overwrite.py  pipelines.py  tower.py  utils.py
twkit/: __init__.py  cli.py  computeenvs.py  helper.py  overwrite.py  pipelines.py  tower.py  utils.py
wrappers/: computeenvs.py  datasets.py  pipelines.py  setup.py  tower.py  utils.py
(+48 files in other folders)
