[project]
name = "seqerakit"
version = "0.4.9"
description = "Automate creation of Seqera Platform resources"
readme = "README.md"
requires-python = ">=3.8,<4"
keywords = [
    "nextflow",
    "bioinformatics",
    "workflow",
    "pipeline",
    "seqera-platform",
    "seqera",
]
authors = [
  {name = "Esha Joshi", email = "esha.joshi@seqera.io"},
  {name = "Adam Talbot", email = "adam.talbot@seqera.io"},
  {name = "Harshil Patel", email = "harshil.patel@seqera.io"},
]
# TODO
maintainers = [
  {name = "Esha Joshi", email = "esha.joshi@seqera.io"},
]
# TODO https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "pyyaml>=6.0.0",
]
[project.urls]
Homepage = "https://seqera.io/"
Documentation = "https://docs.seqera.io/platform/24.2/seqerakit/installation"
Repository = "https://github.com/seqeralabs/seqera-kit"
Issues = "https://github.com/seqeralabs/seqera-kit/issues"
Changelog = "https://github.com/seqeralabs/seqera-kit/releases"

[project.scripts]
seqerakit = "seqerakit.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["seqerakit"]
zip-safe = false
include-package-data = true

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
]
